salesforge-backup-mdapi/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Status__c</fullName>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Price_Must_Be_Positive</fullName>
        <active>true</active>
        <description>Ensure price is greater than zero.</description>
        <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
        <errorMessage>Price must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_Requires_Price</fullName>
        <active>true</active>
        <description>Sold properties require a price.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Property_Status__c, &quot;Sold&quot;),
    ISBLANK(Price__c)
)</errorConditionFormula>
        <errorMessage>A sold property must have a price.</errorMessage>
    </validationRules>
</CustomObject>